      Thanks to Rajendra Gokhale for the suggestion.  (Closes: #779675)
  * commands/lintian.pm:
    + [CL] Apply patch from Maia Everett to avoid British spelling when
      using en_US locale.  (Closes: #868897)

  * lib/Lintian/Check.pm:
    + [CL] Stop emitting {maintainer,uploader}-address-causes-mail-loops
      for @packages.debian.org addresses.  (Closes: #871575)
  * lib/Lintian/Data.pm:
    + [CL] Modify Lintian::Data's "all" to always return keys in insertion
      order, dropping dependency on libtie-ixhash-perl.

  * helpers/coll/objdump-info-helper:
    + [CL] Apply patch from Steve Langasek to accomodate binutils 2.29
      outputting symbols in a different format on ppc64el.
      (Closes: #869750)

  * t/tests/files-privacybreach/*:
    + [CL] Add explicit test for packages including external fonts via
      the Google Font API. Thanks to Ian Jackson for the report.
      (Closes: #873434)
    + [CL] Add explicit test for packages including external fonts via
      the Typekit API via <script/> HTML tags.
  * t/tests/*/desc:
    + [CL] Add missing entries in "Test-For" fields to make
      development/testing workflow less error-prone.

 -- Niels Thykier <niels@thykier.net>  Sun, 23 Jul 2017 10:16:35 +0000

lintian (2.5.52) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - appstream-metadata-in-legacy-location
      - appstream-metadata-legacy-format
      - appstream-metadata-malformed-modalias-provide
      - appstream-metadata-missing-modalias-provide
      - copyright-contains-automatically-extracted-boilerplate
      - copyright-year-in-future
      - debian-rules-sets-DEB_BUILD_OPTIONS
      - elf-maintainer-script
      - emacsen-common-without-dh-elpa
      - file-contains-fixme-placeholder
      - gobject-instrospection-package-missing-depends-on-gir-depends
      - manpage-has-overly-generic-name
      - orig-tarball-missing-upstream-signature
      - package-installs-deprecated-upstart-configuration