@@ -199,7 +199,7 @@ sub run {
         if (   $has_signing_key
             && $file =~ m/\.orig(-[A-Za-z\d-]+)?\.tar\./
             && $file !~ m/\.asc$/
-            && $info->field('version') !~ m/(?:dfsg|debian|ds|repack)/) {
+            && !$info->is_repacked_tarball) {
             next if exists $files->{"$file.asc"};
             tag 'orig-tarball-missing-upstream-signature', $file;
         }
